# discord-agent

./: pyproject.toml
src/: discord_last_messages.py
src/discord_agent/: discord.py  discord_last_messages.py
