[project]
name = "discord-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "ivan liu",email = "ivan.liuyanfeng@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord (>=2.3.2,<3.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
